More changes to enable YUI-Grids CSS layout
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio-nomarc.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio-nomarc.tmpl
@@ -2,7 +2,11 @@
 <title>Koha &rsaquo; Cataloging &rsaquo; Add a Non-MARC Record</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close-addbiblio.inc" -->
 
-
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <!-- TMPL_IF name="ERROR" -->
 Please Specify a Title
