--- a/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-bib-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-bib-search.tmpl
@@ -29,5 +29,8 @@
 	</div>
 </form>
 </div>
-<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
+</div>
+</div>
 
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
