--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/guarantor_search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/guarantor_search.tmpl
@@ -1,6 +1,12 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Guarantor Search</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+
+<div id="doc" class="yui-t7">
+   <div id="bd">
+	<div class="yui-g">
+
 <h1>Search for guarantor</h1>
 	<form action="/cgi-bin/koha/members/guarantor_search.pl" method="post">
 		<input type="text" name="member" value="<!-- TMPL_VAR NAME="member" -->" /> Ordered by
@@ -41,4 +47,8 @@
 <!--/TMPL_IF-->
 
 
+</div>
+</div>
+</div>
 
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
