--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-quicksearch-results.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-quicksearch-results.tmpl
@@ -1,8 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Patron Quick Search</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-
-<script type="text/javascript">
+<!-- TMPL_INCLUDE NAME="header.inc" --><script type="text/javascript">
   // Set the value of the form field to the passed value and optionally shift
     // focus and close the popup.
     function FillForm(val,formname,formfield) {
@@ -16,6 +15,12 @@
         newwin.close();
     }
 </script>
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <div class="searchresults">
 <table>
@@ -42,5 +47,9 @@
   </div>
   <!-- TMPL_ELSE -->No results found<!-- /TMPL_IF -->
 
+</div>
+</div>
+</div>
 
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
