--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/additem-nomarc.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/additem-nomarc.tmpl
@@ -3,6 +3,12 @@
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
 <!-- TMPL_IF NAME="NOBARCODE" -->
 You must give the item a barcode
 <!-- /TMPL_IF -->
