--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/bookcount.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/bookcount.tmpl
@@ -1,23 +1,26 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Circulation Statistics for <!-- TMPL_VAR Name="title" --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <h1>
 <!-- TMPL_VAR Name="title" --> <!-- TMPL_IF NAME="author" -->(<!-- TMPL_VAR Name="author" -->)<!-- /TMPL_IF --></a></h1>
 <h2>Barcode <!-- TMPL_VAR Name="barcode" --></h2>
 <div class="tabitem"><form action="/cgi-bin/koha/catalogue/detail.pl" method="get"><input type="hidden" name="biblionumber" value="<!-- TMPL_VAR Name="biblionumber" -->" /><input type="hidden" name="type" value="intra" /><input type="submit" class="submit" value="Brief Display" /></form> <form action="/cgi-bin/koha/catalogue/moredetail.pl" method="get"><input type="hidden" name="type" value="<!-- TMPL_VAR NAME="type" -->" /><input type="hidden" name="item" value="<!-- TMPL_VAR NAME="itemnumber" -->" /><input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->" /><input type="hidden" name="bi" value="<!-- TMPL_VAR NAME="biblioitemnumber" -->" /> <input type="submit" class="submit" value="Item Details" /></form><!-- TMPL_IF NAME="norequests" --><!-- TMPL_ELSE --> <form action="/cgi-bin/koha/reserve/request.pl" method="get"><input type="hidden" value="<!-- TMPL_VAR name="biblionumber" -->" name="biblionumber"> <input type="submit" value="Place Reserve" class="submit" /></form><!-- /TMPL_IF --></div>
-<div class="data">
 <table>
 		<tr><th>Home Library: </th><td> <!-- TMPL_VAR Name="homebranch" --> </td></tr>
 		<tr><th>Current Library: </th><td> <!-- TMPL_VAR Name="holdingbranch" --></td></tr>
 		<tr><th>Date arrived at current library: </th><td> <!-- TMPL_VAR Name="lastdate" --> </td></tr>
 		<tr><th>Number of issues since since the above date :</th><td> <!-- TMPL_VAR Name="count" --> </td></tr>
 </table>
-</div>
-<div class="table">
-		<table>
+<table>
 			<tr>
 				<th>Library</th>
 				<th>No. of times checked out</th>
@@ -30,9 +33,14 @@
 					<td class="data"><!-- TMPL_VAR Name="seen" --> </td>
 				</tr>
 			<!-- /TMPL_LOOP -->
-		</table></div>
+		</table>
 		</td>
 	</tr>
 </table>
 
-<!-- TMPL_INCLUDE Name="intranet-bottom.inc" -->
+</div>
+</div>
+</div>
+
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
