--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/branchoverdues.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/branchoverdues.tmpl
@@ -1,12 +1,17 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Circulation</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <h1>Circulation: Library Overdues at <!-- TMPL_VAR NAME="LoginBranchname" --></h1>
 
-<div id="mainbloc">
 <!-- selector of location -->
 <!-- TMPL_IF NAME="location" -->
 <legend>location selected</legend>
@@ -169,4 +174,8 @@
         </fieldset>
     <!-- /TMPL_IF -->
 </div>
-<!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
+</div>
+</div>
+
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
