--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/selectbranchprinter.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/selectbranchprinter.tmpl
@@ -1,9 +1,14 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Circulation &rsaquo; Set Library</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
 
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <h1>Circulation &rsaquo; Set Library</h1>
 
@@ -39,5 +44,9 @@
 </form>
 
 
-<!-- TMPL_INCLUDE Name="intranet-bottom.inc" -->
+</div>
+</div>
+</div>
 
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
