--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/transferstodo.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/transferstodo.tmpl
@@ -5,11 +5,15 @@
 (<!-- TMPL_VAR NAME="cardnumber" -->)
 <!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
 
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
-<div id="mainbloc">
     <h1>Transfers to do <!-- TMPL_VAR NAME="show_date" --></h1>
     <!-- TMPL_IF name="branchesloop" -->
     <div id="resultlist">
@@ -59,12 +63,16 @@
                 </tr>
             <!-- /TMPL_LOOP -->
             </table>
-            <br /><br />
             <!-- /TMPL_IF -->
         <!-- /TMPL_LOOP -->
     </div>
     <!-- TMPL_ELSE -->
         <p>No transfers to do</p>
     <!-- /TMPL_IF -->
+
 </div>
-<!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
+</div>
+</div>
+
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
