--- a/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-create-template.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-create-template.tmpl
@@ -1,15 +1,17 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><title>Koha &rsaquo;  Labels</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-labels.inc" -->
 
-<div id="main">
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <form name="input" action="/cgi-bin/koha/labels/label-create-template.pl" method="get">
 
-<h3>
-        Create Label Template
-</h3>
+<h3>Create Label Template</h3>
 
 
 
@@ -42,26 +44,21 @@ Template Description: <textarea name="tmpl_desc" cols="40" rows="3" name="tmpl_d
 </table>
 
 
-<br />
 Units: <select name="units">
     <!-- TMPL_LOOP NAME="units" -->
         <option value="<!-- TMPL_VAR NAME="unit" -->"><!-- TMPL_VAR NAME="desc" --></option>
     <!-- /TMPL_LOOP -->
 </select>
-
-<br />
-<br />
 Font Size: <input type="textbox" name="fontsize"  size="1" value="" />
-<br />
-<br />
 Active: <input type="checkbox" name="active" />
-
         <input type="hidden" name="op" value="create" />
-<br />
-<br />
         <input type="submit" value="Save" />
         <input type="reset" value="Reset" />
 </form>
-</div>
-<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
 
+</div>
+</div>
+</div>
+
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
