--- a/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-edit-layout.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-edit-layout.tmpl
@@ -1,39 +1,42 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Labels<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE name="masthead.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Labels
+<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="label-topmenu.inc" -->
-<!-- TMPL_INCLUDE name="intranet-nav.inc" -->
 
-<div id="main">
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <form name="input" action="/cgi-bin/koha/labels/label-manager.pl" method="get">
 
 <h3>Layout Name</h3>
-<input type="textbox" name="layoutname"  SIZE="20" value="<!-- TMPL_VAR NAME="layoutname" -->">
-
-<br />
-<br />
+<input type="textbox" name="layoutname"  size="20" value="<!-- TMPL_VAR NAME="layoutname" -->" />
 
 <h3>Choose Barcode Type (encoding)</h3>
 <select name="barcodetype">
     <!-- TMPL_LOOP NAME="barcode_types" -->
-        <option value="<!-- TMPL_VAR NAME="code" -->"
-            <!-- TMPL_IF NAME="active" --> selected  <!-- /TMPL_IF -->
-        ><!-- TMPL_VAR NAME="desc" --></option>
+	<!-- TMPL_IF NAME="active" -->
+        <option value="<!-- TMPL_VAR NAME="code" -->" selected="selected"><!-- TMPL_VAR NAME="desc" --></option>
+	<!-- TMPL_ELSE -->
+        <option value="<!-- TMPL_VAR NAME="code" -->"><!-- TMPL_VAR NAME="desc" --></option>
+	<!-- /TMPL_IF -->
     <!-- /TMPL_LOOP -->
 </select>
-<br />
+
 
 <h3>Choose Layout Type</h3>
 <select name="printingtype">
     <!-- TMPL_LOOP NAME="printingtypes" -->
-        <option value="<!-- TMPL_VAR NAME="code" -->"
-            <!-- TMPL_IF NAME="active" --> selected  <!-- /TMPL_IF -->>
-        <!-- TMPL_VAR NAME="desc" --></option>
+<!-- TMPL_IF NAME="active" -->
+	<option value="<!-- TMPL_VAR NAME="code" -->" selected="selected"><!-- TMPL_VAR NAME="desc" --></option>
+	<!-- TMPL_ELSE -->
+        <option value="<!-- TMPL_VAR NAME="code" -->"><!-- TMPL_VAR NAME="desc" --></option>
+<!-- /TMPL_IF -->
     <!-- /TMPL_LOOP -->
 </select>
 
-<br />
-<br />
 
 <h3>
     Choose Order Of Text Fields to Print
@@ -43,9 +46,15 @@
         <td>
  <select name="tx_title">
             <!-- TMPL_LOOP Name="tx_title" -->
-                <option value="<!-- TMPL_VAR Name="num" -->"<!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+			<!-- TMPL_IF Name="selected" -->
+                <option value="<!-- TMPL_VAR Name="num" -->" selected="selected">
                     <!-- TMPL_VAR Name="num" -->
                 </option>
+			<!-- TMPL_ELSE -->
+                <option value="<!-- TMPL_VAR Name="num" -->">
+                    <!-- TMPL_VAR Name="num" -->
+                </option>
+		<!-- /TMPL_IF -->
             <!-- /TMPL_LOOP -->
             </select>
         <label>Title</label>
@@ -53,9 +62,15 @@
             <td>
         <select name="tx_subtitle">
                  <!-- TMPL_LOOP Name="tx_subtitle" -->
-                <option value="<!-- TMPL_VAR Name="num" -->"<!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+         <!-- TMPL_IF Name="selected" -->
+				<option value="<!-- TMPL_VAR Name="num" -->" selected="selected">
                     <!-- TMPL_VAR Name="num" -->
                 </option>
+			<!-- TMPL_ELSE -->	
+                <option value="<!-- TMPL_VAR Name="num" -->">
+                    <!-- TMPL_VAR Name="num" -->
+                </option>
+			<!-- /TMPL_IF -->	
             <!-- /TMPL_LOOP -->
       </select>
         <label>Subtitle</label>
@@ -64,9 +79,15 @@
         <td>
         <select name="tx_author">
              <!-- TMPL_LOOP Name="tx_author" -->
-                <option value="<!-- TMPL_VAR Name="num" -->"<!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+		<!-- TMPL_IF Name="selected" -->	 
+                <option value="<!-- TMPL_VAR Name="num" -->" selected="selected">
                     <!-- TMPL_VAR Name="num" -->
                 </option>
+		<!-- TMPL_ELSE -->		
+                <option value="<!-- TMPL_VAR Name="num" -->">
+                    <!-- TMPL_VAR Name="num" -->
+                </option>
+		<!-- /TMPL_IF -->		
             <!-- /TMPL_LOOP -->
             </select>
        <label>Author</label>
@@ -76,9 +97,15 @@
         <td>
         <select name="tx_isbn">
               <!-- TMPL_LOOP Name="tx_isbn" -->
-                <option value="<!-- TMPL_VAR Name="num" -->"<!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+		<!-- TMPL_IF Name="selected" -->	  
+                <option value="<!-- TMPL_VAR Name="num" -->" selected="selected">
                     <!-- TMPL_VAR Name="num" -->
                 </option>
+		<!-- TMPL_ELSE -->		
+                <option value="<!-- TMPL_VAR Name="num" -->">
+                    <!-- TMPL_VAR Name="num" -->
+                </option>
+		<!-- /TMPL_IF -->		
             <!-- /TMPL_LOOP -->
             </select>
       <label>ISBN</label>
@@ -87,18 +114,30 @@
         <td>
         <select name="tx_issn">
                <!-- TMPL_LOOP Name="tx_issn" -->
-                <option value="<!-- TMPL_VAR Name="num" -->"<!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+		<!-- TMPL_IF Name="selected" -->	   
+                <option value="<!-- TMPL_VAR Name="num" -->" selected="selected">
                     <!-- TMPL_VAR Name="num" -->
                 </option>
+		<!-- TMPL_ELSE -->		
+                <option value="<!-- TMPL_VAR Name="num" -->">
+                    <!-- TMPL_VAR Name="num" -->
+                </option>
+		<!-- /TMPL_IF -->		
             <!-- /TMPL_LOOP -->
             </select>
      <label>ISSN</label>
         <td>
         <select name="tx_itemtype">
                  <!-- TMPL_LOOP Name="tx_itemtype" -->
-                <option value="<!-- TMPL_VAR Name="num" -->"<!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+		<!-- TMPL_IF Name="selected" -->		 
+                <option value="<!-- TMPL_VAR Name="num" -->" selected="selected">
                     <!-- TMPL_VAR Name="num" -->
                 </option>
+			<!-- TMPL_ELSE -->	
+                <option value="<!-- TMPL_VAR Name="num" -->">
+                    <!-- TMPL_VAR Name="num" -->
+                </option>
+		<!-- /TMPL_IF -->		
             <!-- /TMPL_LOOP -->
             </select>
    <label>Itemtype</label>
@@ -108,9 +147,15 @@
         <td>
         <select name="tx_dewey">
                 <!-- TMPL_LOOP Name="tx_dewey" -->
-                <option value="<!-- TMPL_VAR Name="num" -->"<!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+		<!-- TMPL_IF Name="selected" -->		
+                <option value="<!-- TMPL_VAR Name="num" -->" selected="selected">
                     <!-- TMPL_VAR Name="num" -->
                 </option>
+			<!-- TMPL_ELSE -->	
+                <option value="<!-- TMPL_VAR Name="num" -->">
+                    <!-- TMPL_VAR Name="num" -->
+                </option>
+			<!-- /TMPL_IF -->	
             <!-- /TMPL_LOOP -->
        </select>
         <label>Dewey</label>
@@ -118,9 +163,15 @@
         <td>
         <select name="tx_barcode">
                  <!-- TMPL_LOOP Name="tx_barcode" -->
-                <option value="<!-- TMPL_VAR Name="num" -->"<!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+		<!-- TMPL_IF Name="selected" -->		 
+                <option value="<!-- TMPL_VAR Name="num" -->" selected="selected">
                     <!-- TMPL_VAR Name="num" -->
                 </option>
+			<!-- TMPL_ELSE -->	 
+                <option value="<!-- TMPL_VAR Name="num" -->">
+                    <!-- TMPL_VAR Name="num" -->
+                </option>
+			<!-- /TMPL_IF -->	
             <!-- /TMPL_LOOP -->
       </select>
         <label>Barcode (as text)</label>
@@ -128,9 +179,15 @@
         <td>
         <select name="tx_classif">
                   <!-- TMPL_LOOP Name="tx_classif" -->
-                <option value="<!-- TMPL_VAR Name="num" -->"<!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+		<!-- TMPL_IF Name="selected" -->		    
+                <option value="<!-- TMPL_VAR Name="num" -->" selected="selected">
                     <!-- TMPL_VAR Name="num" -->
                 </option>
+			<!-- TMPL_ELSE -->	  
+                <option value="<!-- TMPL_VAR Name="num" -->">
+                    <!-- TMPL_VAR Name="num" -->
+                </option>
+		<!-- /TMPL_IF -->		
             <!-- /TMPL_LOOP -->
      </select>
         <label>Classification</label>
@@ -140,9 +197,15 @@
         <td>
         <select name="tx_subclass">
                   <!-- TMPL_LOOP Name="tx_subclass" -->
-                <option value="<!-- TMPL_VAR Name="num" -->"<!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+		<!-- TMPL_IF Name="selected" -->		  
+                <option value="<!-- TMPL_VAR Name="num" -->" selected="selected">
                     <!-- TMPL_VAR Name="num" -->
                 </option>
+			<!-- TMPL_ELSE -->	  
+                <option value="<!-- TMPL_VAR Name="num" -->">
+                    <!-- TMPL_VAR Name="num" -->
+                </option>
+			<!-- /TMPL_IF -->	
             <!-- /TMPL_LOOP -->
      </select>
         <label>Subclass</label>
@@ -150,33 +213,45 @@
             <td>
         <select name="tx_itemcallnumber">
                  <!-- TMPL_LOOP Name="tx_itemcallnumber" -->
-                <option value="<!-- TMPL_VAR Name="num" -->"<!-- TMPL_IF Name="selected" --> selected <!-- /TMPL_IF -->>
+			<!-- TMPL_IF Name="selected" -->	  
+                <option value="<!-- TMPL_VAR Name="num" -->" selected="selected">
                     <!-- TMPL_VAR Name="num" -->
                 </option>
+			<!-- TMPL_ELSE -->	 
+                <option value="<!-- TMPL_VAR Name="num" -->">
+                    <!-- TMPL_VAR Name="num" -->
+                </option>
+			<!-- /TMPL_IF -->	
             <!-- /TMPL_LOOP -->
       </select>
         <label>Call Number</label>
         </td>
+		<td>&nbsp;</td>
   </tr>
 </table>
 
-<br />
+
 <h3>
-        Start printing from Label number:<input type="textbox" name="startlabel"  SIZE="1"  value=" <!-- TMPL_VAR NAME="startlabel" --> ">
+        Start printing from Label number: <input type="textbox" name="startlabel"  size="1"  value=" <!-- TMPL_VAR NAME="startlabel" --> " />
 </h3>
 
-<br />
-<h3>Draw Guide Boxes<input type="checkbox" name="guidebox" value=1 
-                <!-- TMPL_IF NAME="guidebox"-->
-                     checked
-                <!-- /TMPL_IF -->  ></h3>
+<h3>Draw Guide Boxes 
+<!-- TMPL_IF NAME="guidebox"-->
+<input type="checkbox" name="guidebox" value="1"  checked="checked" />
+<!-- TMPL_ELSE -->
+<input type="checkbox" name="guidebox" value="1" />
+<!-- /TMPL_IF -->
+</h3>
 
 <p>
-        <input type="submit" value="Submit">
-        <input type="hidden" name=op value="save_layout">
-        <input type="hidden" name=layout_id value="<!-- TMPL_VAR NAME="layout_id" -->">
+        <input type="submit" value="Submit" />
+        <input type="hidden" name="op" value="save_layout" />
+        <input type="hidden" name="layout_id" value="<!-- TMPL_VAR NAME="layout_id" -->" />
 </p>
 </form>
 </div>
-<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
+</div>
+</div>
 
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
