--- a/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-edit-template.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-edit-template.tmpl
@@ -1,16 +1,17 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><title>Koha &rsaquo;  Labels</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-labels.inc" -->
 
-<div id="main">
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
 <form name="input" action="/cgi-bin/koha/labels/label-save-template.pl" method="get">
 
-<h3>
-        Edit Label Template
-</h3>
-
-
+<h3>Edit Label Template</h3>
 
 <h3>Template Settings</h3>
 <table>
@@ -54,12 +55,7 @@ Units: <select name="units">
     <!-- /TMPL_LOOP -->
 </select>
 
-<br />
-<br />
 Font Size: <input type="textbox" name="fontsize"  size="1" value="<!-- TMPL_VAR NAME="fontsize" -->" />
-<br />
-<br />
-
 
 Active: 
 <!-- TMPL_IF NAME="active" -->
@@ -75,5 +71,8 @@ Active:
 </p>
 </form>
 </div>
-<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
+</div>
+</div>
 
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
