--- a/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-manager.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-manager.tmpl
@@ -1,9 +1,14 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><title>Koha &rsaquo;  Labels</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-labels.inc" -->
 
-<div id="main">
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
 <!-- TMPL_INCLUDE NAME="label-status.inc" -->
 
 <!-- TMPL_UNLESS NAME="batch_id" -->
@@ -93,19 +98,21 @@
 
 <!-- /TMPL_UNLESS -->
 
-
-
-</div>
-
-
-<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
-
-
-
 <script type="text/javascript">
 function Plugin(batch_id) {
 	window.open("label-item-search.pl?batch_id="+batch_id+"",'FindABibIndex','width=600,height=460,toolbar=no,scrollbars=yes');
 }
 </script>
+
+</div>
+</div>
+</div>
+
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
+
+
+
+
 
 
