--- a/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-templates.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-templates.tmpl
@@ -1,9 +1,14 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><title>Koha &rsaquo;  Labels</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-labels.inc" -->
 
-<div id="main">
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
 <!-- TMPL_INCLUDE NAME="label-status.inc" -->
 
 <!-- TMPL_IF NAME="resultsloop" -->
@@ -50,8 +55,11 @@
 </form>
 <!-- /TMPL_IF -->
 
-<br/>
 <a href="/cgi-bin/koha/labels/label-create-template.pl?op=blank">Create New Label Template</a>
+
+</div>
+</div>
 </div>
 
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
