--- a/koha-tmpl/intranet-tmpl/prog/en/modules/maint/catmaintain.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/maint/catmaintain.tmpl
@@ -1,6 +1,13 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Catalog Maintenance</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <!-- TMPL_IF NAME="allsub-p" -->
 <table>
@@ -104,5 +111,9 @@ is now <!-- TMPL_VAR NAME="sub" ESCAPE="HTML" -->
 
 <!-- /TMPL_IF -->
 
+</div>
+</div>
+</div>
 
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
