--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/borrowers_details.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/borrowers_details.tmpl
@@ -1,7 +1,14 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Patron Details</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<div id="mainbloc">
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
 	<h1>PATRON DETAILS</h1>
 	
 	<form name="form" method="post" action="/cgi-bin/members/borrowers_details.pl">
@@ -58,4 +65,9 @@
 	</form>
 
 
+</div>
+</div>
+</div>
 
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
