--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/deletemem.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/deletemem.tmpl
@@ -1,8 +1,15 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Can't Delete Patron</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
 	<h3>Cannot Delete Patron</h3>
 		<!-- TMPL_IF name="ItemsOnIssues" -->
 			Patron has <!-- TMPL_VAR name="ItemsOnIssues" --> item(s) checked out.
@@ -14,4 +21,9 @@
 			Patron's record has guaranteed accounts attached.
 		<!-- /TMPL_IF -->
 
+</div>
+</div>
+</div>
+
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
