--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/mancredit.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/mancredit.tmpl
@@ -1,9 +1,14 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Borrowers &rsaquo; Create Manual Credit</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <h2>Manual Credit</h2>
 <form action="/cgi-bin/koha/members/mancredit.pl" method="post">
@@ -26,5 +31,9 @@
 <form action="/cgi-bin/koha/members/boraccount.pl" method="get"><input type="hidden" value="<!-- TMPL_VAR Name="borrowernumber" -->" name="borrowernumber" /><input type="submit" value="Cancel" /></form>
 
 
+</div>
+</div>
+</div>
 
-<!-- TMPL_INCLUDE Name="intranet-bottom.inc" -->
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
