--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-flags.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-flags.tmpl
@@ -1,9 +1,14 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Set Privileges for <!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <form method="post" action="/cgi-bin/koha/members/member-flags.pl">
     <input type="hidden" name="member" value="<!-- TMPL_VAR NAME="member" -->" />
@@ -29,4 +34,9 @@
 <input type="submit" value="Set Flags" />
 
 </form>
+</div>
+</div>
+</div>
+
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
