--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryA.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryA.tmpl
@@ -1,11 +1,17 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Adult Patron Management</title>
-<script type="text/javascript" src="<!-- TMPL_VAR NAME='themelang' -->/js/members.js"></script>
+<script type="text/javascript" src="<!-- TMPL_VAR NAME="themelang" -->/js/members.js"></script>
 <!-- TMPL_INCLUDE NAME="calendar.inc" -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
+
 	<!-- TMPL_IF NAME="opadd" -->
 	<h1>
 		Add adult patron (step <!-- TMPL_VAR NAME="step" -->) <!-- TMPL_VAR NAME="surname" --> <!-- TMPL_VAR name="firstname" -->
@@ -619,4 +625,9 @@
 		</form>
 	<!-- /TMPL_IF -->
 
-<!--	 TMPL_INCLUDE NAME="intranet-bottom.inc" -->
+</div>
+</div>
+</div>
+
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
