--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tmpl
@@ -1,8 +1,14 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Patron Details</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b"><div class="yui-g">
 
 <!-- TMPL_IF NAME="unknowuser" -->
     This patron doesn't exist.<a href="javascript:back();">Go Back</a>
@@ -14,61 +20,45 @@
 <input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->" />
 </form>
 <div id="action">
-    <div class="edit">
-        <!-- TMPL_IF name="adultborrower" -->
-        <a href="/cgi-bin/koha/members/memberentry.pl?op=add&amp;guarantorid=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;category_type=C">
-            Add child
-            </a> 
+    
+	<div class="edit">
+        <ul><!-- TMPL_IF name="adultborrower" -->
+        <li><a href="/cgi-bin/koha/members/memberentry.pl?op=add&amp;guarantorid=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;category_type=C">Add child</a> </li>
         <!-- /TMPL_IF -->
         <!-- TMPL_IF NAME="category_type" -->
             <!--TMPL_IF NAME="guarantor"-->
-                <a href="/cgi-bin/koha/members/memberentry.pl?op=modify&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;guarantorid=<!-- TMPL_VAR NAME="guarantorborrowernumber" -->&amp;category_type=<!-- TMPL_VAR NAME="category_type"-->">
+                <li><a href="/cgi-bin/koha/members/memberentry.pl?op=modify&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;guarantorid=<!-- TMPL_VAR NAME="guarantorborrowernumber" -->&amp;category_type=<!-- TMPL_VAR NAME="category_type"-->">
             <!--TMPL_ELSE-->
-            <a href="/cgi-bin/koha/members/memberentry.pl?op=modify&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;category_type=<!-- TMPL_VAR NAME="category_type"-->">
-            <!--/TMPL_IF-->
-        Edit
-            </a>
+            <li><a href="/cgi-bin/koha/members/memberentry.pl?op=modify&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;category_type=<!-- TMPL_VAR NAME="category_type"-->">
+            <!--/TMPL_IF-->Edit</a></li>
         <!-- TMPL_ELSE --> <!-- try with categorycode if no category_type -->
             <!-- TMPL_IF NAME="categorycode" -->
-            <a href="/cgi-bin/koha/members/memberentry.pl?op=modify&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;categorycode=<!-- TMPL_VAR NAME="categorycode"-->">
-                Edit
-            </a>
+            <li><a href="/cgi-bin/koha/members/memberentry.pl?op=modify&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;categorycode=<!-- TMPL_VAR NAME="categorycode"-->">Edit</a></li>
             <!-- TMPL_ELSE --> <!-- if no categorycode, set category_type to A by default -->
-                <a href="/cgi-bin/koha/members/memberentry.pl?op=modify&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;category_type=A">
-                    Edit
-                </a>
+                <li><a href="/cgi-bin/koha/members/memberentry.pl?op=modify&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;category_type=A">Edit</a></li>
             <!-- /TMPL_IF -->
         <!-- /TMPL_IF -->
         
-        <a href="/cgi-bin/koha/members/member-password.pl?member=<!-- TMPL_VAR NAME="borrowernumber" -->">
-            Set password
-        </a>
-        <a href="/cgi-bin/koha/members/member-flags.pl?member=<!-- TMPL_VAR NAME="borrowernumber" -->">
-            Privileges
-        </a> 
-        <a href="javascript:confirm_deletion();">
-            Delete
-        </a> 
+        <li><a href="/cgi-bin/koha/members/member-password.pl?member=<!-- TMPL_VAR NAME="borrowernumber" -->">Set password</a></li>
+       <li> <a href="/cgi-bin/koha/members/member-flags.pl?member=<!-- TMPL_VAR NAME="borrowernumber" -->">Privileges</a></li> 
+        <li><a href="javascript:confirm_deletion();">Delete</a> </li></ul>
     </div>
+	
     <div class="view">
-        <a href="/cgi-bin/koha/members/boraccount.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">
-            Account
-        </a> 
-        <a href="/cgi-bin/koha/members/pay.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">
-            Pay fines
-        </a> 
-        <a href="/cgi-bin/koha/members/readingrec.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">
-            Reading record
-        </a>
-        <a href="javascript:confirm_reregistration();" onclick="document.form.value='y'" class="gest_borro_op">
-        Renew
-        </a>
+<ul>
+	<li>        <a href="/cgi-bin/koha/members/boraccount.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">Account</a> </li>
+	<li>        <a href="/cgi-bin/koha/members/pay.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">Pay fines</a> </li>
+	<li>        <a href="/cgi-bin/koha/members/readingrec.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">Reading record</a></li>
+	<li>        <a href="javascript:confirm_reregistration();" onclick="document.form.value='y'" class="gest_borro_op">Renew</a></li>
+</ul>
     </div>
-    <div class="others">
         <!-- TMPL_IF NAME="CAN_user_parameters"-->
-        <a href="/cgi-bin/koha/tools/viewlog.pl?do_it=1&amp;module=MEMBERS&amp;action=MODIFY&amp;object=<!-- TMPL_VAR NAME="borrowernumber"-->">Modification log</a>
-        <!-- /TMPL_IF -->
+    <div class="others">
+<ul>
+	<li>        <a href="/cgi-bin/koha/tools/viewlog.pl?do_it=1&amp;module=MEMBERS&amp;action=MODIFY&amp;object=<!-- TMPL_VAR NAME="borrowernumber"-->">Modification log</a></li>
+</ul>
     </div>
+        <!-- /TMPL_IF -->
 </div>
 <!-- TMPL_IF NAME="flagged" -->
     <ul>
@@ -361,4 +351,9 @@ function confirm_reregistration() {
 }
 </script>
 <!-- /TMPL_IF --> <!-- unknowuser -->
+</div>
+</div>
+</div>
+
+<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
