--- a/koha-tmpl/intranet-tmpl/prog/en/css/login.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/login.css
@@ -51,6 +51,9 @@ label {
 	border: 1px solid #a2a2a2;
 	margin: 5em auto;
 	padding: 1.5em;
+	position : relative;
+	top : auto;
+	right : auto;
 	width: 25em;
 }
 
