some spelling fixes
in 2 english templates and a french plugin

Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/bor_issues_top.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/bor_issues_top.tmpl
@@ -40,7 +40,7 @@ function Dopop(link) {
 		
 		<table>
 			<tr >
-				<th>Rank/Patronss</th>
+				<th>Rank/Patrons</th>
 				<!-- TMPL_LOOP NAME="loopcol" -->
 					<th colspan="2"><!-- TMPL_VAR NAME="coltitle" --></th>
 				<!-- /TMPL_LOOP -->
