--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/borrowers_out.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/borrowers_out.tmpl
@@ -30,7 +30,7 @@
         
         <table>
             <tr >
-                <th>Num/Patronss</th>
+                <th>Num/Patrons</th>
                 <!-- TMPL_LOOP NAME="loopcol" -->
                     <th><!-- TMPL_VAR NAME="coltitle" --></th>
                 <!-- /TMPL_LOOP -->
